<resources>
    <string name="app_name">WxWanAndroid</string>
    <string name="title_activity_home" translatable="false">MainActivity</string>
    <string name="home">Home</string>
    <string name="knowledge">Knowledge</string>
    <string name="square">Square</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="go_to_top">GoToTop</string>
    <string name="faqs">faqs</string>
    <string name="official_accounts">OfficalAccounts</string>
</resources>