<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_home_content">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_knowledge"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/knowledge" />
    <item
        android:id="@+id/navigation_square"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/square" />
    <item
        android:id="@+id/navigation_faqs"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/faqs"></item>
    <item
        android:id="@+id/navigation_offical_accounts"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/official_accounts"></item>
</menu>